--- a/works/index.html
+++ b/works/index.html
@@ -45,6 +45,23 @@
           <h1 class="subtitle">ALL WORKS</h1>
           <ul class="works">
             <li>
+                <img src="./all_works/synthe2_flyer.jpg">
+            </li>
+            <li>
+                <h4>[Flyer]SyntheticSense vol.9</h4>
+                <p>Date:2026.02.21<br>
+                    
+                    From. H B
+                    <br>
+                <a href="https://syntheticsense.net/" target="_blank" rel="noopener noreferrer">→Join</a>
+                <br>
+                <a href="https://www.instagram.com/p/DUOAux1k229/" target="_blank" rel="noopener noreferrer">→About</a>
+               <br>
+            </p>
+             </li>
+          </ul> 
+          <ul class="works">
+            <li>
                 <img src="./all_works/sesa_1.jpg">
             </li>
             <li>
@@ -222,7 +239,7 @@
             </li>
             <li>
                 <h4>[Flyer]SyntheticSense vol.8</h4>
-                <p>Release:2025.10.10<br>
+                <p>Date:2025.11.09<br>
                     
                     From. H B
                     <br>
