--- a/works/index.html
+++ b/works/index.html
@@ -87,7 +87,7 @@
             </li>
             <li>
                 <h4>[Flyer]CAGAYAKE!3DAY'S 対決編</h4>
-                <p>Release:2026.02.18
+                <p>Date:2026.02.18
                     
                     <br>
                     Illustrated by キムラ
@@ -107,7 +107,7 @@
             </li>
             <li>
                 <h4>[Flyer]CAGAYAKE!3DAY'S 開幕編</h4>
-                <p>Release:2026.01.30
+                <p>Date:2026.01.30
                     
                     <br>
                     Illustrated by キムラ
