--- a/link/index.html
+++ b/link/index.html
@@ -79,6 +79,7 @@
                 <tr>
                   <th><a href="https://mfworks.net/"target="_blank" rel="noreferrer noopener"><img src="./banner/mf_works.png" width="200px" height="auto" border="0"alt="mf_works バナー"></a></th>
                   <th><a href="https://key.visualarts.gr.jp/"target="_blank" rel="noreferrer noopener"><img src="./banner/banner.jpg" width="200px" height="auto" border="0"alt="AIR バナー"></a></th>
+                  <th><a href="https://erbatur.online/"target="_blank" rel="noreferrer noopener"><img src="./banner/shinba.png" width="200px" height="auto" border="0"alt="AIR バナー"></a></th>
                 </tr>
 
 
